--- a/index.html
+++ b/index.html
@@ -1,64 +1,51 @@
-<!-- MAKE a webpage with a scroll animation, which tells a story -->
-<!-- Create the body as setions wtih scroll animation-->
-<!-- Create a header with a title and a menu -->
-<!-- Create a footer with a menu -->
-<!-- Create a menu with a list of links -->
-
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>What a Sticky</title>
-    <link rel="stylesheet" href="css/style.css">
+<meta charset="utf-8">
+<title>Untitled-1</title>
+
 </head>
+
 <body>
-    <div class="center"
-    <div class="container">
-        <header class="header">
-            <h1>IM - CommLab - What a sticky</h1>
-        </header>
-        <section id="section1" style="background-color: #06283D;">
-            <img src="1.jpg">
-        </section>
-
-        <section id="section2" style="background-color: #256D85;">
-            <h2>This story is about Sticky. Throughout his life, he never understood why people referred to him as a stickman. He was always told that he looks like a stick, but he didn't know what a stick as he was blind and never asked. One day, he heard someone calling his name from afar ... </h2>
-            <br>
-            <img src="2.jpg" >
-            <h2>The voice kept coming closer and closer, until Sticky was able to touch something, it started speaking and explaining to him that it's a wooden stick. He still couldn't understand why people were comparing him to an object and not a person.</h2>
-            <br>
-        
-        </section>
-
-        <section id="section3" style="background-color: #47B5FF;">
-            <br>
-            <h2> He picked the stick up and talked for a bit, until he found that what they have in common is how thin they both are, and that people have been calling him a stick man as he combines both aspects, the thinness of the stick as well as the body of a man. The stick told him that anyone that picks it up has one wish to make, and wished to see the other stick men in the world ...</h2>
-            <img src="3.jpg" >
-        </section>
-
-        <section id="section4" style="background-color: #DFF6FF;">
-            <h2>A few seconds later, he felt the ground split and felt a free fall for a couple of minutes. He was horrified and confused until he his body was caught by a piece of cloth, held from the sides by two stickmen, welcoming him to Stick World, a place that consists of people that made the same wish as Sticky.</h2>
-            <img src="4.jpg" style="top: 50px;">
-        </section>
-
-        <section id="section5" style="background-color: #DFF6FF;">
-            <h2>A few seconds later, he felt the ground split and felt a free fall for a couple of minutes. He was horrified and confused until he his body was caught by a piece of cloth, held from the sides by two stickmen, welcoming him to Stick World, a place that consists of people that made the same wish as Sticky.</h2>
-            <img src="5.jpg" style="top: 50px;">
-        </section>
-
-        <section id="section6" style="background-color: #DFF6FF;">
-            <h2>A few seconds later, he felt the ground split and felt a free fall for a couple of minutes. He was horrified and confused until he his body was caught by a piece of cloth, held from the sides by two stickmen, welcoming him to Stick World, a place that consists of people that made the same wish as Sticky.</h2>
-            <img src="1.jpg" style="top: 50px;">
-        </section>
-
-
-        <section 
-
-        <container class= "footer">
-            <h1>Pavly Halim - CommLab</h1>
-        </container>
+<div id="container">
+    <div id="content">
+        <!--add the text that will fade in-->
+        <div id="section1">
+           <!--add image -->
+           <img src="1.jpg" alt="image" width="100%" height="100%">
+            <button id ="button1" style="position: absolute; bottom: 0; left: 50%; padding: 35px 50px; background-color: white; font-size: 20; transform: translate(-50%, -50%);">get up</button>
     </div>
-    </div>
-</body>
-<!-- script file  -->
-<script src="script.js"></script>
+
+        <div id="section2">
+            <img src="2.jpg" alt="image" width="100%" height="100%">
+            <button id ="button2" style="position: absolute; bottom: 0; left: 50%; padding: 35px 50px; background-color: white; font-size: 20; transform: translate(-50%, -50%);">change clothes</button>
+</div>
+
+        <div id="section3">
+
+            <img src="3.jpg" alt="image" width="100%" height="100%">
+            <button id ="button3" style="display:inline-block; position: absolute; bottom: 0; left: 35%; padding: 35px 50px; background-color: white; font-size: 20; transform: translate(-50%, -50%);">go to class</button>
+            <button id ="button4" style="display:inline-block; position: absolute; bottom: 0; left: 65%; padding: 35px 50px; background-color: white; font-size: 20; transform: translate(-50%, -50%);">go eat</button>
+
+        </div>
+
+        <div id="section4">
+            <img src="4.jpg" alt="image" width="100%" height="100%">
+            <button id ="button4" style="display:inline-block; position: absolute; bottom: 0; left: 35%; padding: 35px 50px; background-color: white; font-size: 20; transform: translate(-50%, -50%);">go eat</button>
+            <button id ="button5" style="display:inline-block; position: absolute; bottom: 0; left: 65%; padding: 35px 50px; background-color: white; font-size: 20; transform: translate(-50%, -50%);">go sleep</button>
+</div>
+
+        <div id="section5">
+
+            <img src="5.jpg" alt="image" width="100%" height="100%">
+            <button id ="button5" style="position: absolute; bottom: 0; left: 50%; padding: 35px 50px; background-color: white; font-size: 20; transform: translate(-50%, -50%);">go sleep</button>
+
+        </div>
+        <div id="section6">
+
+            <img src="1.jpg" alt="image" width="100%" height="100%">
+
+        </div>
+        </div>
+</div>
+    </body>
 </html>
