--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <meta charset="utf-8">
 <title>Untitled-1</title>
+<link type="text/css" href="css/styles.css" rel="stylesheet" />
 
 </head>
 
@@ -48,4 +49,5 @@
         </div>
 </div>
     </body>
+    <script src="script.js"></script>
 </html>
