--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="utf-8">
 <title>Untitled-1</title>
-<link type="text/css" href="css/styles.css" rel="stylesheet" />
+<link type="text/css" href="style.css" rel="stylesheet" />
 
 </head>
 
