--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <head>
 <meta charset="utf-8">
 <title>Comic</title>
-<link type="text/css" href="style.css" rel="stylesheet" />
+<link type="text/css" href="style.css" rel="stylesheet">
+  <link rel="script" href="script.js"/>
 
 </head>
 
