--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <title>Comic</title>
 <link type="text/css" href="style.css" rel="stylesheet">
-  <link rel="script" href="script.js"/>
+  <link rel="script" href="script.js">
 
 </head>
 
