--- a/index.html
+++ b/index.html
@@ -1,9 +1,107 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Comic</title>
-<link type="text/css" href="style.css" rel="stylesheet">
+<title>Untitled-1</title>
+<style type="text/css">
+html {
+    scroll-behavior: smooth;
+  }
+      body {
+          margin: 0;
+          padding: 0;
+          background-color: #000;
+          color: #fff;
+          font-family: sans-serif;
+          font-size: 16px;
+          line-height: 1.5;
+      }
+#container {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
 
+}
+#container #content {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    color: #fff;
+    font-size: 50px;
+    text-align: center;
+    line-height: 100%;
+
+   
+}
+#container #content #section1 {
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    background-color: #f00;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+}
+#container #content #section2 {
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    background-color: #0f0;
+    position: absolute;
+    top: 100%;
+    left: 0;
+
+    
+}
+#container #content #section3 {
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    background-color: #00f;
+    position: absolute;
+    top: 200%;
+    left: 0;
+
+
+}
+#container #content #section4 {
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    background-color: #00f;
+    position: absolute;
+    top: 300%;
+    left: 0;
+
+
+}
+#container #content #section5 {
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    background-color: #00f;
+    position: absolute;
+    top: 400%;
+    left: 0;
+
+
+}
+#container #content #section6 {
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    background-color: #00f;
+    position: absolute;
+    top: 500%;
+    left: 0;
+
+
+}
+
+</style>
 </head>
 
 <body>
