--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled-1</title>
+<title>Comic</title>
 <style type="text/css">
 html {
     scroll-behavior: smooth;
